# Side-Scroller

./: .gitignore  CMakeLists.txt  SideScroller.sln
Engine/: CMakeLists.txt  Component.h  Engine.vcxproj  Engine.vcxproj.filters  GameObject.cpp  GameObject.h  ILifeCycle.h  Scene.cpp  Scene.h  ScriptComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  ILifeCycle.h  IPhysicsEngine.h  IRenderer.h  JoltPhysicsEngine.cpp  JoltPhysicsEngine.h  ModelManager.cpp  ModelManager.h  Physics.cpp  Physics.h  Scene.cpp  Scene.h
Engine/src/Components/: AnimatorComponent.h  BoxCollisionComponent.cpp  BoxCollisionComponent.h  CameraComponent.h  CapsuleCollisionComponent.h  CollisionComponent.h  Component.h  ModelRendererComponent.cpp  ModelRendererComponent.h  RendererComponent.cpp  RendererComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  ScriptComponent.h  TransformComponent.cpp  TransformComponent.h
SideScroller/: CMakeLists.txt  Main.cpp  SideScroller.vcxproj
SideScroller/src/: Main.cpp  SideScrollerPlayerController.cpp  SideScrollerPlayerController.h
